--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/VolunteerProfile.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/VolunteerProfile.cshtml
@@ -250,7 +250,7 @@
                 <!-- Rank Skill Section with Dropdown next to the heading -->
                 <div class="col-md-7">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h5 class="mb-0">Rank Skill</h5>
+                        <h5 class="mb-0">Ratings</h5>
                         <!-- Dynamic Dropdown Section for sorting -->
                         <div class="form-group mb-0">
                             <select class="form-control" id="skillRankFilter" style="width: 200px;" onchange="filterSkills()">
