--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="~/Content/css1/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="~/Content/images1/favicon.svg" type="image/x-icon">
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
 
 <body>
@@ -172,6 +174,8 @@
             </div>
         </div>
     </div>
+    <!-- Include Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <!-- Other necessary scripts -->
     <script src="~/Content/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script src="~/Content/js1/bootstrap.bundle.min.js"></script>
