--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
@@ -4,121 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-@*<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>*@
-@*<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">*@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-@*<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">*@
-@*<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">*@
-
-@*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">*@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<link href="~/Content/Css2/opportunityCarousel.css" rel="stylesheet" />
-<style>
-    .carousel-inner img {
-        width: 100%;
-        height: 500px; /* Set a fixed height for consistency */
-        object-fit: cover;
-    }
-
-    .carousel-container {
-        max-width: 600px;
-        margin: 0 auto;
-    }
-
-    .event-description {
-        margin-bottom: 20px;
-        text-align: justify;
-    }
-
-    .event-details {
-        margin: 18px 0px 18px 0px;
-    }
-
-    .org-description {
-        text-align: justify;
-    }
-
-    .org-info h3 {
-        margin-top: 10px;
-    }
-
-    .skills-required {
-        margin-top: 30px;
-        font-size: larger;
-    }
-
-    .skill-badge .badge {
-        margin: 5px 5px 0 0;
-    }
-
-
-    .progress {
-        position: relative;
-        height: 30px;
-        background-color: #e9ecef;
-        border-radius: 0.25rem;
-        overflow: hidden;
-    }
-
-    .progress-bar {
-        height: 100%;
-        background-color: #007bff;
-    }
-
-    .progress-label {
-        position: absolute;
-        width: 100%;
-        text-align: center;
-        left: 0;
-        top: 0;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: black; /* Adjust color as needed */
-    }
-
-    #counter {
-        margin-top: 10px;
-    }
-
-    .card-text {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 2; /* Limit to 2 lines */
-        -webkit-box-orient: vertical;
-    }
-
-    .card-title {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 1; /* Limit to 1 line */
-        -webkit-box-orient: vertical;
-    }
-
-    :root {
-        --primary-danger-request: red;
-        --secondary-danger-request: #de0a26;
-        --main-color: white;
-    }
-
-    .btnRequest {
-        background-color: var(--primary-danger-request);
-        color: var(--main-color);
-    }
-
-        .btnRequest:hover {
-            background-color: var(--secondary-danger-request);
-            color: var(--main-color);
-        }
-</style>
-
+<link href="~/Content/css2/Eventdetails.css" rel="stylesheet" />
+<link href="~/Content/css2/nav.css" rel="stylesheet" />
 
 @if (Model.volunteer != null && Model.volunteer.Status == 2)
 {
@@ -139,16 +29,16 @@
                 <div class="col-md-8">
                     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                            @for (int i = 0; i < Model.detailsEventImage.Count; i++)
+                            @for (int i = 0; i < Model.detailsEventImageOne.Count; i++)
                             {
                                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="@i" class="@(i == 0 ? "active" : "")" aria-current="@(i == 0 ? "true" : "false")" aria-label="Slide @i"></button>
                             }
                         </div>
                         <div class="carousel-inner">
-                            @for (int i = 0; i < Model.detailsEventImage.Count; i++)
+                            @for (int i = 0; i < Model.detailsEventImageOne.Count; i++)
                             {
                                 <div class="carousel-item @(i == 0 ? "active" : "")">
-                                    <img src="@Url.Content("~/Content/Events/" + Model.detailsEventImage[i].eventImage)" class="d-block w-100 img-fluid fixed-size-img" alt="Event Image" style="border-radius: 1rem; margin: 15px 0px 15px 0px;">
+                                    <img src="@Url.Content("~/Content/Events/" + Model.detailsEventImageOne[i].eventImage)" class="d-block w-100 img-fluid fixed-size-img" alt="Event Image" style="border-radius: 1rem; margin: 15px 0px 15px 0px;">
                                 </div>
                             }
                         </div>
@@ -163,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 event-details" style="border-radius: 1rem; background-color: #FFFF">
-                    @foreach (var location in Model.listOfEvents)
+                    @foreach (var location in Model.listOfEventsOne)
                     {
                         <i class="bi bi-geo-alt" style="font-size:24px;"></i> @location.Location
 
@@ -202,36 +92,43 @@
                 <div class="apply-button mt-2">
                     @foreach (var orgDetails in Model.orgEvents)
                     {
-                        if (!Model.volunteersStatusEvent.Count().Equals(0))
+                        bool hasAllRequiredSkills = Model.detailsSkillRequirement
+                            .All(reqSkill => Model.volunteersSkills.Any(volSkill => volSkill.skillId == reqSkill.skillId));
+
+                        if (hasAllRequiredSkills)
                         {
-                            foreach (var status in Model.volunteersStatusEvent)
+                            // Display join buttons if all required skills are met
+                            if (!Model.volunteersStatusEvent.Count().Equals(0))
                             {
-                                if (status.Status.Equals(1) && Model.volunteersStatusEvent.Count() != 0)
+                                foreach (var status in Model.volunteersStatusEvent)
                                 {
-                                    <button style="width: 100%" onclick="leaveEvent('@orgDetails.eventId')" class="btn btnRequest">
-                                        Leave event
-                                    </button>
-                                }
-                                else if (status.Status.Equals(0) && Model.volunteersStatusEvent.Count() != 0)
-                                {
-                                    <button style="width: 100%" onclick="cancelEvent('@orgDetails.eventId')" class="btn btnRequest">
-                                        Cancel application
-                                    </button>
-                                }
-                                else
-                                {
-                                    <div class="action-buttons mt-2">
-                                        <div class="d-flex justify-content-between">
-                                            <!-- Accept Button -->
-                                            <button type="button" class="btn btn-success flex-fill me-1" data-toggle="modal" data-target="#acceptEventModal" data-event-id="@orgDetails.eventId" id="acceptButton">
-                                                Accept Invitation
-                                            </button>
-                                            <!-- Decline Button -->
-                                            <button type="button" class="btn btn-danger flex-fill ms-1" onclick="declineInvite('@orgDetails.eventId')" data-event-id="@orgDetails.eventId" id="declineButton">
-                                                Decline Invitation
-                                            </button>
+                                    if (status.Status.Equals(1) && Model.volunteersStatusEvent.Count() != 0)
+                                    {
+                                        <button style="width: 100%" onclick="leaveEvent('@orgDetails.eventId')" class="btn btnRequest">
+                                            Leave event
+                                        </button>
+                                    }
+                                    else if (status.Status.Equals(0) && Model.volunteersStatusEvent.Count() != 0)
+                                    {
+                                        <button style="width: 100%" onclick="cancelEvent('@orgDetails.eventId')" class="btn btnRequest">
+                                            Cancel application
+                                        </button>
+                                    }
+                                    else
+                                    {
+                                        <div class="action-buttons mt-2">
+                                            <div class="d-flex justify-content-between">
+                                                <!-- Accept Button -->
+                                                <button type="button" class="btn btn-success flex-fill me-1" data-toggle="modal" data-target="#acceptEventModal" data-event-id="@orgDetails.eventId" id="acceptButton">
+                                                    Accept Invitation
+                                                </button>
+                                                <!-- Decline Button -->
+                                                <button type="button" class="btn btn-danger flex-fill ms-1" onclick="declineInvite('@orgDetails.eventId')" data-event-id="@orgDetails.eventId" id="declineButton">
+                                                    Decline Invitation
+                                                </button>
+                                            </div>
                                         </div>
-                                    </div>
+                                    }
                                 }
                             }
                         }
@@ -276,7 +173,7 @@
 
                         if (orgDetails.targetAmount != null)
                         {
-                            foreach (var evnt in Model.listOfEvents)
+                            foreach (var evnt in Model.listOfEventsOne)
                             {
                                 <div class="donation-progress">
                                     <label>Fund Raised</label>
@@ -356,16 +253,16 @@ else
                 <div class="col-md-8">
                     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                            @for (int i = 0; i < Model.detailsEventImage.Count; i++)
+                            @for (int i = 0; i < Model.detailsEventImageOne.Count; i++)
                             {
                                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="@i" class="@(i == 0 ? "active" : "")" aria-current="@(i == 0 ? "true" : "false")" aria-label="Slide @i"></button>
                             }
                         </div>
                         <div class="carousel-inner">
-                            @for (int i = 0; i < Model.detailsEventImage.Count; i++)
+                            @for (int i = 0; i < Model.detailsEventImageOne.Count; i++)
                             {
                                 <div class="carousel-item @(i == 0 ? "active" : "")">
-                                    <img src="@Url.Content("~/Content/Events/" + Model.detailsEventImage[i].eventImage)" class="d-block w-100 img-fluid fixed-size-img" alt="Event Image" style="border-radius: 1rem; margin: 15px 0px 15px 0px;">
+                                    <img src="@Url.Content("~/Content/Events/" + Model.detailsEventImageOne[i].eventImage)" class="d-block w-100 img-fluid fixed-size-img" alt="Event Image" style="border-radius: 1rem; margin: 15px 0px 15px 0px;">
                                 </div>
                             }
                         </div>
@@ -380,7 +277,7 @@ else
                     </div>
                 </div>
                 <div class="col-md-4 event-details" style="border-radius: 1rem; background-color: #FFFF">
-                    @foreach (var location in Model.listOfEvents)
+                    @foreach (var location in Model.listOfEventsOne)
                     {
                         <i class="bi bi-geo-alt" style="font-size:24px;"></i> @location.Location
 
@@ -443,13 +340,17 @@ else
                                 @*<button style="width: 100%" onclick="applyEvent('@orgDetails.eventId')" class="btn btn-primary btn-block">
                                         Join now
                                     </button>*@
-
+                        bool hasAllRequiredSkills = Model.detailsSkillRequirement
+                            .All(reqSkill => Model.volunteersSkills.Any(volSkill => volSkill.skillId == reqSkill.skillId));
+                            if (hasAllRequiredSkills)
+                            {
                                 <div class="join-button mt-2">
                                     <!-- Button to open the join modal -->
                                     <button style="width: 100%" type="button" class="btn btn-primary btn-block" onclick="applyEvent('@orgDetails.eventId')" @*data-toggle="modal" data-target="#joinModal"*@>
                                         Join now
                                     </button>
                                 </div>
+                            }
 
                                 <!-- Join Modal -->
                                 <div class="modal fade" id="joinModal" tabindex="-1" role="dialog" aria-labelledby="joinModalLabel" aria-hidden="true">
@@ -492,7 +393,7 @@ else
 
                             if (orgDetails.targetAmount != null)
                             {
-                                foreach (var evnt in Model.listOfEvents)
+                                foreach (var evnt in Model.listOfEventsOne)
                                 {
                                     <div class="donation-progress">
                                         <label>Fund Raised</label>
