Tiwasa ila luke

--- a/Tabang-Hub/Tabang-Hub/Views/Admin/ManageSkill.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Admin/ManageSkill.cshtml
@@ -11,7 +11,7 @@
         <input type="text" class="form-control w-25" placeholder="Search" />
     </div>
     <div class="active-accounts">
-        <h5 class="text-start">Active Accounts</h5>
+        <h5 class="text-start">Skills</h5>
         <div class="table-responsive border rounded p-2 mb-5">
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
