--- a/Tabang-Hub/Tabang-Hub/Views/Admin/VolunteerAccounts.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Admin/VolunteerAccounts.cshtml
@@ -50,7 +50,7 @@
     </div>
 
     <div class="not-active-accounts">
-        <h5 class="text-start">Not Active Accounts</h5>
+        <h5 class="text-start">None-Active Accounts</h5>
         <div class="table-responsive border rounded p-2">
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
