--- a/Tabang-Hub/Tabang-Hub/Views/Organization/EventsList.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/EventsList.cshtml
@@ -118,7 +118,7 @@
                             <thead class="thead-dark">
                                 <tr>
                                     <th>Event Name</th>
-                                    <th>Total Donation</th>
+                                    <th>Total Donations</th>
                                     <th>Target Amount</th>
                                     <th>Total Volunteers</th>
                                     <th>Date Started</th>
