--- a/Tabang-Hub/Tabang-Hub/Views/Organization/Reports.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/Reports.cshtml
@@ -94,7 +94,7 @@
                                     <i class="iconly-boldAdd-User"></i>
                                 </div>
                                 <div>
-                                    <h6 class="text-muted">Total Donation</h6>
+                                    <h6 class="text-muted">Total Donations</h6>
                                     <h6 class="font-extrabold mb-0">₱@Model.totalDonation</h6>
                                 </div>
                             </div>
@@ -109,7 +109,7 @@
                                     <i class="iconly-boldBookmark"></i>
                                 </div>
                                 <div>
-                                    <h6 class="text-muted">Total Volunteer</h6>
+                                    <h6 class="text-muted">Total Volunteers</h6>
                                     <h6 class="font-extrabold mb-0">@Model.totalVolunteer</h6>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                         }
                         else
                         {
-                            <p class="text-muted">No recent ongoing events.</p>
+                            <p class="text-muted">No recent ongoing event.</p>
                         }
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                         }
                         else
                         {
-                            <p class="text-muted">No recent donators.</p>
+                            <p class="text-muted">No recent donator.</p>
                         }
                     </div>
                 </div>
