--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Admin.cshtml
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="~/Admin/OrganizationAccounts">Organization Accounts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Admin/ManageSkill">Manage Skill</a>
+                        <a class="nav-link" href="~/Admin/ManageSkill">Manage Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="~/Admin/Reports">Reports</a>
