--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -51,7 +51,7 @@
                         <li class="sidebar-item">
                             <a href="~/Organization/EventsList" class='sidebar-link'>
                                 <i class="bi bi-table"></i>
-                                <span>Event List</span>
+                                <span>Events List</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
