--- a/Tabang-Hub/Tabang-Hub/Views/Page/ChooseRegister.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/ChooseRegister.cshtml
@@ -2,6 +2,11 @@
 @{
     ViewBag.Title = "ChooseRegister";
 }
+<style>
+    body{
+        padding-top: 100px;
+    }
+</style>
 
 <div class="container my-5">
     <div class="row justify-content-center">
