--- a/Tabang-Hub/Tabang-Hub/Views/Page/RegisterOrg.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/RegisterOrg.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewBag.Title = "Register Organization";
 }
-
+<style>
+    body{
+        padding-top: 100px;
+    }
+</style>
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-lg-8 col-md-10 col-sm-12">
