--- a/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Login.cshtml
@@ -18,6 +18,9 @@
         font-weight: bold;
         margin-bottom: 15px;
     }
+    body{
+        padding-top: 100px;
+    }
 </style>
 <div class="container mt-5">
     <div class="row justify-content-center">
