--- a/Tabang-Hub/Tabang-Hub/Views/Page/Register.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Register.cshtml
@@ -4,6 +4,12 @@
     ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    body{
+        padding-top: 100px;
+    }
+</style>
+
 
 <div class="container mt-5">
     <div class="row justify-content-center">
